Register window class, and create tool to process reflection.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ if (EXISTS libraries/unittest/CMakeLists.txt)
 	add_subdirectory(libraries/unittest)
 endif()
 
+add_subdirectory(tools/generate_reflection)
+
 set(SRC_INTERFACE
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/class_info.h
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/cpp_function.h
