Add parameter info such as return and number of params to class info

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,18 +20,24 @@ set(SRC_INTERFACE
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/cpp_parameters.h
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/cpp_property.h
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/cpp_static_function.h
+	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/function_info.h
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/function_parameters.h
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/object_constructor.h
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/object_instance.h
+	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/property_info.h
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/reflection.h
 	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/register_class_info.h
-	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/register_class.h)
+	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/register_class.h
+	${CMAKE_CURRENT_SOURCE_DIR}/include/reflection/static_function_info.h)
 
 set(SRC_MAIN
 	${CMAKE_CURRENT_SOURCE_DIR}/src/class_info.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/function_info.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/function_parameters.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/object_instance.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/src/reflection.cpp)
+	${CMAKE_CURRENT_SOURCE_DIR}/src/property_info.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/reflection.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/static_function_info.cpp)
 	
 set(SRC_TEST
 	${CMAKE_CURRENT_SOURCE_DIR}/test/class_info_tests.cpp
