Add workaround to copy vcpkg dlls on install

--- a/tools/generate_reflection/CMakeLists.txt
+++ b/tools/generate_reflection/CMakeLists.txt
@@ -33,3 +33,7 @@ install(TARGETS generate_reflection
         RUNTIME DESTINATION bin
 		LIBRARY DESTINATION bin
     	ARCHIVE DESTINATION bin)
+
+install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/Release/
+	DESTINATION bin
+	FILES_MATCHING PATTERN "*.dll")
